--- a/gallery-bannye.html
+++ b/gallery-bannye.html
@@ -275,6 +275,13 @@
 
   gtag('config', 'UA-11278966-3');
 </script>
+<script>
+  if (window.jQuery) {
+  var verJquery = jQuery.fn.jquery;
+  // выведем версию jQuery в консоль
+  console.log(verJquery);
+}
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 </body>
