--- a/articles.html
+++ b/articles.html
@@ -22,11 +22,11 @@
                                 <button class="btn btn-outline-success" type="submit">Поиск</button>
                             </form>
                             <div class="flare-buttons">
-                                <button class="flare-button">Сделать заказ</button>
+                                <button class="flare-button"><a href="make_an_order.html">Сделать заказ</a></button>
                             </div>
                             <div class="header__topmenu_contacts">
                                 <ul class="menu-list-top">
-                                    <li><a href="#"><img src="img/email.png" alt="email"></a></li>
+                                    <li><a href="make_an_order.html"><img src="img/email.png" alt="email"></a></li>
                                     <li><a href="#"><img src="img/whatsapp.png" alt="Whatsapp"></a></li>
                                     <li><a href="#"><img src="img/vk.png" alt="VK"></a></li>
                                 </ul>
@@ -199,7 +199,7 @@
                     <div class="header__topmenu_contacts">
                         <h2 class="footer__h2">Как со мной связаться</h2>
                         <ul class="menu-list">
-                            <li><a href="#"><img src="./img/email.png" alt="E-mail"></a></li>
+                            <li><a href="make_an_order.html"><img src="./img/email.png" alt="E-mail"></a></li>
                             <li><a href="#"><img src="./img/whatsapp.png" alt="Whatsapp"></a></li>
                             <li><a href="#"><img src="./img/vk.png" alt="VK"></a></li>
                         </ul>
